--- a/less-assignment/css/index.css
+++ b/less-assignment/css/index.css
@@ -1,67 +1,498 @@
-header {
-  height: 175px;
+.header {
+  background-color: #000000;
+  text-align: center;
+  padding: 10px 10px 0 10px;
 }
-#header {
-  display: flex;
-  justify-content: center;
-  position: fixed;
-  top: 0;
-  width: 100%;
+.header h1 {
   color: white;
-  background-color: #333;
-  height: 70px;
   font-family: 'Fugaz One', serif;
-  padding-top: 1rem;
   font-size: 5rem;
+  margin: 0;
 }
-.logo {
+.header .logo {
   padding-left: 1rem;
   padding-top: 0.5rem;
   font-size: 4rem;
 }
-.nav-bar {
-  height: 70px;
-  position: fixed;
-  top: 12%;
-  width: 100%;
-}
-.nav-bar ul {
-  list-style-type: none;
-  margin: 0;
-  padding: 0;
+#navbar {
   overflow: hidden;
-  background-color: #FFFFFF;
-  width: 100%;
   display: flex;
   justify-content: center;
+  font-family: 'Avenir';
 }
-.nav-bar ul li a {
-  display: block;
-  color: black;
+#navbar .nav-container {
+  display: flex;
+  justify-content: space-around;
+  width: 100%;
+  max-width: 100rem;
+  border-bottom: 3px solid #000000;
+}
+#navbar .nav-container #nav-logo h1 {
+  font-family: 'Fugaz One', serif;
+  font-size: 2rem;
+  margin: 0;
+}
+#navbar .nav-container #nav-logo h1 i {
+  margin-left: 0.5rem;
+  font-size: 2rem;
+}
+#navbar a {
+  float: left;
   text-align: center;
-  padding: 14px 16px;
-  text-decoration: none;
-  text-transform: uppercase;
-  font-weight: 900;
-  font-size: 18px;
-}
-.nav-bar ul li a:hover:not(.active) {
-  border-bottom: 3px solid black;
-  color: #4c4c4c;
+  font-weight: bold;
   text-decoration: none;
 }
-* {
+/************ Conditional classes ************/
+/********** Base Styles **************/
+.nav-styles {
+  background-color: #FFFFFF;
+}
+.nav-styles .active {
+  border-bottom: 5px solid #000000;
+}
+.nav-styles a {
+  color: #000000;
+  padding: 14px;
+  font-size: 2rem;
+}
+.nav-styles a:hover {
+  border-bottom: 5px solid #000000;
+}
+.nav-styles input[type=text] {
+  padding: 6px;
+  margin-top: 8px;
+  font-size: 12px;
+  border: none;
+  border-bottom: 3px solid #000000;
+  background-color: transparent;
+  color: #000000;
+  width: 100px;
+}
+.nav-styles .search-container button {
+  float: right;
+  padding: 6px 10px;
+  margin-top: 8px;
+  margin-right: 16px;
+  font-size: 17px;
+  border: none;
+  cursor: pointer;
+  background-color: transparent;
+}
+.scroll-nav-styles {
+  background-color: #000000;
+  z-index: 9;
+}
+.scroll-nav-styles #nav-logo {
+  color: #FFFFFF;
+}
+.scroll-nav-styles .nav-links .active {
+  border-bottom: 5px solid #FFFFFF;
+}
+.scroll-nav-styles .nav-links a {
+  color: #FFFFFF;
+  padding: 16px;
+  font-size: 1.5rem;
+}
+.scroll-nav-styles .nav-links a:hover {
+  border-bottom: 5px solid #FFFFFF;
+}
+.scroll-nav-styles input[type=text] {
+  padding: 6px;
+  margin-top: 8px;
+  font-size: 12px;
+  border: none;
+  border-bottom: 3px solid #FFFFFF;
+  background-color: transparent;
+  color: #FFFFFF;
+  width: 100px;
+}
+.scroll-nav-styles .search-container button {
+  float: right;
+  padding: 6px 10px;
+  margin-top: 8px;
+  margin-right: 16px;
+  font-size: 17px;
+  border: none;
+  cursor: pointer;
+  background-color: transparent;
+  color: #FFFFFF;
+}
+/*************************/
+.sticky {
+  position: fixed;
+  top: 0;
+  width: 100%;
+  opacity: 0;
+}
+.sticky .nav-container {
+  border-bottom: none !important;
+}
+.hide-nav-logo {
+  display: none;
+}
+.show-nav-logo {
+  display: block;
+  justify-content: space-between;
+  opacity: 0;
+  padding: 14px;
+}
+.animated {
+  animation: appear 0.5s;
+  animation-iteration-count: 1;
+  animation-fill-mode: forwards;
+}
+@keyframes appear {
+  0% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
+}
+#navbar .search-container {
+  float: right;
+  margin-left: 2rem;
+}
+/************ COMMON ************/
+html {
   font-size: 62.5%;
 }
+body {
+  padding: 0;
+  margin: 0;
+}
 main {
+  background-color: #eeeeee;
+}
+.main-container {
+  padding: 5rem 0;
   margin: 0 auto;
   max-width: 100rem;
+  max-height: 100%;
 }
-.video-container {
-  max-width: 100rem;
+.headings {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
-video {
+.headings h1 {
+  font-size: 4rem;
+  font-weight: 700;
+  font-family: 'Avenir';
+  margin: 4rem 0;
+}
+.headings .horizontal-line {
+  margin-top: 2rem;
+  border: 2px solid #000000;
   width: 100%;
+}
+.hero-image {
+  width: 98%;
   height: 100%;
+  border: 10px solid white;
+}
+/************ INDEX.HTML LESS ************/
+.image-container {
+  max-width: 100rem;
+  margin-bottom: 2rem;
+  margin-top: 2rem;
+}
+.catalog-row {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  grid-gap: 2rem;
+  margin-bottom: 2rem;
+}
+.catalog-row .catalog-item {
+  border: 10px solid #FFFFFF;
+  background-color: #FFFFFF;
+  flex: 1 0 24rem;
+  transition: all 0.2s ease-in-out;
+}
+.catalog-row .catalog-item img {
+  height: 300px;
+  width: 100%;
+}
+.catalog-row .catalog-item .catalog-text {
+  font-family: 'Avenir';
+  padding: 20px;
+  text-align: center;
+}
+.catalog-row .catalog-item .catalog-text .small-caps {
+  font-variant: small-caps;
+  font-size: 1.5rem;
+}
+.catalog-row .catalog-item .catalog-text .deal-container {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+}
+.catalog-row .catalog-item .catalog-text .deal-container .deal-text {
+  font-size: 18px;
+  font-weight: 200;
+  margin: 0;
+  color: red;
+}
+.catalog-row .catalog-item .catalog-text .deal-container .price-text {
+  text-decoration: line-through;
+}
+.catalog-row .catalog-item .catalog-text .small-text {
+  font-variant: small-caps;
+  font-size: 1.5rem;
+}
+.catalog-row .catalog-item .catalog-text .price-text {
+  font-size: 18px;
+  font-weight: 200;
+  margin: 0;
+  color: #8e8e8e;
+}
+.catalog-row .catalog-item .catalog-text button {
+  margin-top: 0.5rem;
+  border-radius: 5px;
+  padding: 10px;
+  font-weight: bold;
+  font-size: 1.5rem;
+  transition: 0.4s ease;
+  background-color: #FFFFFF;
+  border: 3px solid #000000;
+}
+.catalog-row .catalog-item .catalog-text button:hover {
+  cursor: pointer;
+  color: white;
+  transition: 0.4s ease;
+  background-color: #000000;
+}
+.catalog-row .catalog-item:hover {
+  transform: scale(1.015);
+  z-index: 0;
+  cursor: pointer;
+}
+.subscribe-row {
+  display: grid;
+  grid-template-columns: auto;
+  background-color: #000000;
+  border: 10px solid #FFFFFF;
+  height: 250px;
+  padding: 15px;
+  font-family: 'Avenir';
+}
+.subscribe-row .subscribe-item {
+  color: #FFFFFF;
+  text-align: center;
+}
+.subscribe-row .subscribe-item .long-horizontal-line {
+  margin: 0 auto;
+  border: 2px solid #FFFFFF;
+  width: 32%;
+}
+.subscribe-row .subscribe-item .short-horizontal-line {
+  margin: 0 auto;
+  margin-top: 1rem;
+  margin-bottom: 1rem;
+  border: 2px solid #FFFFFF;
+  width: 25%;
+}
+.subscribe-row .subscribe-item h1 {
+  font-family: 'Fugaz One', serif;
+  font-size: 3rem;
+  margin-bottom: 0;
+}
+.subscribe-row .subscribe-item .small-text {
+  font-variant: small-caps;
+  font-size: 2.5rem;
+  font-weight: 500;
+}
+.subscribe-row .subscribe-item .select-q {
+  font-size: 1.9rem;
+}
+.subscribe-row .subscribe-item .search-container input[type=email] {
+  margin-top: 2rem;
+  font-size: 17px;
+  border: none;
+  border-bottom: 3px solid #FFFFFF;
+  background-color: transparent;
+  color: #FFFFFF;
+  width: 300px;
+}
+.subscribe-row .subscribe-item .search-container button {
+  margin: 0.5rem 0 0 1rem;
+  border-radius: 5px;
+  padding: 5px;
+  font-weight: bold;
+  font-size: 1.5rem;
+  transition: 0.4s ease;
+  background-color: #FFFFFF;
+  border: 3px solid #FFFFFF;
+}
+.subscribe-row .subscribe-item .search-container button:hover {
+  cursor: pointer;
+  color: white;
+  transition: 0.4s ease;
+  background-color: #000000;
+}
+.subscribe-row .subscribe-item .search-container .nav-links-row {
+  font-size: 3rem;
+  padding-top: 2rem;
+}
+/************ COMMON ************/
+html {
+  font-size: 62.5%;
+}
+body {
+  padding: 0;
+  margin: 0;
+}
+main {
+  background-color: #eeeeee;
+}
+.main-container {
+  padding: 5rem 0;
+  margin: 0 auto;
+  max-width: 100rem;
+  max-height: 100%;
+}
+.headings {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+.headings h1 {
+  font-size: 4rem;
+  font-weight: 700;
+  font-family: 'Avenir';
+  margin: 4rem 0;
+}
+.horizontal-line {
+  margin-top: 2rem;
+  border: 2px solid black;
+  width: 100%;
+}
+.hero-image {
+  width: 98%;
+  height: 100%;
+  border: 10px solid white;
+}
+.image-container {
+  max-width: 100rem;
+  margin-bottom: 2rem;
+  margin-top: 2rem;
+}
+.bike-catalog-row {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(20rem, 1fr));
+  grid-gap: 2rem;
+  margin-bottom: 2rem;
+}
+.bike-catalog-item {
+  border: 10px solid white;
+  background-color: #FFFFFF;
+  flex: 1 0 24rem;
+  transition: all 0.2s ease-in-out;
+}
+.bike-catalog-item img {
+  height: 400px;
+  object-fit: cover;
+  width: 100%;
+}
+.bike-catalog-item .catalog-text {
+  font-family: 'Avenir';
+  padding: 20px;
+  text-align: center;
+}
+.bike-catalog-item .catalog-text .small-caps {
+  font-variant: small-caps;
+  font-size: 1.5rem;
+}
+.bike-catalog-item .catalog-text .small-text {
+  font-variant: small-caps;
+  font-size: 1.5rem;
+  color: #8e8e8e;
+}
+.bike-catalog-item .catalog-text .price-text {
+  font-size: 18px;
+  color: #8e8e8e;
+  font-weight: 200;
+  margin: 0;
+}
+.bike-catalog-item .catalog-text button {
+  margin-top: 0.5rem;
+  border-radius: 5px;
+  padding: 10px;
+  font-weight: bold;
+  font-size: 1.5rem;
+  transition: 0.4s ease;
+  background-color: #FFFFFF;
+  border: 3px solid #000000;
+}
+.bike-catalog-item .catalog-text button:hover {
+  cursor: pointer;
+  color: white;
+  transition: 0.4s ease;
+  background-color: #000000;
+}
+.bike-catalog-item:hover {
+  transform: scale(1.015);
+  z-index: 0;
+  cursor: pointer;
+}
+footer {
+  width: 100%;
+  background-color: #000000;
+  font-family: 'Avenir';
+}
+.footer-container {
+  max-width: 100rem;
+  margin: 0 auto;
+  color: white;
+}
+.footer-container h1 {
+  margin: 0;
+  padding-top: 2rem;
+}
+.footer-container h3 {
+  font-size: 2rem;
+}
+.footer-container .footer-logo {
+  display: flex;
+  font-family: 'Fugaz One', serif;
+  justify-content: center;
+  font-size: 3rem;
+}
+.footer-container .footer-logo i {
+  font-size: 3rem;
+  margin: 0.2rem 0 0 1rem;
+}
+.footer-container .nav-links-row {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  font-variant: small-caps;
+}
+.footer-container .nav-links-row a {
+  text-decoration: none;
+  color: #FFFFFF;
+}
+.footer-container .nav-links-row a h3 {
+  cursor: pointer;
+  text-decoration: none;
+}
+.footer-container .nav-links-row a:hover {
+  color: #8e8e8e;
+}
+.footer-container .nav-links-row .slash-divider {
+  margin: 2rem 2rem;
+  cursor: auto;
+}
+.footer-container .nav-links-row .copyright {
+  font-size: 1.5rem;
+  color: #8e8e8e;
+}
+.footer-container .nav-links-row i {
+  cursor: pointer;
+  font-size: 4rem;
+  padding: 15px;
+}
+.footer-container .nav-links-row i:hover {
+  color: #8e8e8e;
 }
 /*# sourceMappingURL=main.css.map */
